--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-library-skeleton",
+  "name": "@speleotica/frcs2walls",
   "version": "0.0.0-development",
-  "description": "my personal ES2015 library project skeleton",
+  "description": "convert cave survey data from frcs to walls format",
   "main": "index.js",
   "sideEffects": false,
   "scripts": {
@@ -30,6 +30,9 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "husky": {
     "hooks": {
@@ -68,17 +71,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jedwards1211/typescript-library-skeleton.git"
+    "url": "https://github.com/speleotica/frcs2walls.git"
   },
   "keywords": [
-    "typescript"
+    "cave-survey"
   ],
   "author": "Andy Edwards",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jedwards1211/typescript-library-skeleton/issues"
+    "url": "https://github.com/speleotica/frcs2walls/issues"
   },
-  "homepage": "https://github.com/jedwards1211/typescript-library-skeleton#readme",
+  "homepage": "https://github.com/speleotica/frcs2walls#readme",
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
@@ -94,6 +97,7 @@
     "@jedwards1211/eslint-config": "^2.0.2",
     "@jedwards1211/eslint-config-typescript": "^2.0.2",
     "@types/chai": "^4.2.22",
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
@@ -104,10 +108,13 @@
     "codecov": "^3.8.3",
     "copy": "^0.3.2",
     "cross-env": "^7.0.3",
+    "dedent-js": "^1.0.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "flow-bin": "^0.161.0",
+    "fs-extra": "^10.0.0",
     "husky": "^7.0.2",
+    "iconv-lite": "^0.6.3",
     "lint-staged": "^11.1.2",
     "mocha": "^9.1.2",
     "nyc": "^15.1.0",
@@ -118,6 +125,9 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4"
+    "@babel/runtime": "^7.15.4",
+    "@speleotica/frcsdata": "^4.0.0",
+    "@speleotica/unitized": "^2.0.0",
+    "@speleotica/walls": "^1.3.1"
   }
 }
